--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "express-status-monitor": "^1.3.4",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
