--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Yasas Sandeepa",
   "license": "MIT",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-status-monitor": "^1.3.4",
     "winston": "^3.3.3",
