--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "logging-demo",
-  "version": "1.0.0",
+  "name": "loggviewer",
+  "version": "2.0.0",
   "description": "This is a demo for Logging app in Node.js",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
-  "author": "Yasas Sandeepa",
-  "license": "MIT",
+  "author": "Christof Kaller",
+  "license": "Private",
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
